--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/LogisticsRole/LogisticsWorkAreaJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/LogisticsRole/LogisticsWorkAreaJPanel.form
@@ -41,9 +41,9 @@
                   <Component id="valueLabel" alignment="0" min="-2" pref="26" max="-2" attributes="0"/>
                   <Component id="enterpriseLabel" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace pref="174" max="32767" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="172" max="-2" attributes="0"/>
-              <EmptySpace pref="319" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="163" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
